[package]
name = "simple-web-crawler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "swc"
path = "src/main.rs"

[lib]
name = "swc"
path = "src/lib.rs"

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
futures = {  version = "0.3", features = ["executor", "thread-pool"] }
uuid = {  version = "1", features = ["v4"] }
