[package]
name = "simple-web-crawler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "swc"
path = "src/main.rs"

[build]
rustflags = ["--cfg", "tokio_unstable"]

[dependencies]
async-pipes = { path = "../async-pipes" }
html5ever = "0.26"
markup5ever_arcdom = "0.1"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
